# Rust-Axum-Hello-World

./: Cargo.toml  vercel.json
src/: main.rs
